setUp Navigation Drawer & calling API

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#F6F6F6</color>
+    <color name="primary">#90AFD5</color>
+    <color name="secondary">#396295</color>
+    <color name="gray">#A8AAAD</color>
+    <color name="blue">#90AFD5</color>
+    <color name="orange">#F1A43C</color>
+    <color name="yellow">#F5CA45</color>
+    <color name="rippleColor">#396295</color>
 </resources>
