--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,15 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#F6F6F6</color>
-    <color name="primary">#90AFD5</color>
+    <color name="primary">#ffff</color>
     <color name="secondary">#396295</color>
     <color name="gray">#A8AAAD</color>
     <color name="blue">#90AFD5</color>
     <color name="orange">#F1A43C</color>
     <color name="yellow">#F5CA45</color>
     <color name="rippleColor">#396295</color>
+    <color name="icon_night_color">#90AFD5</color>
+    <color name="icon_cloud_color">#D6E3F5</color>
+
+
 </resources>
