--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="white">#F6F6F6</color>
     <color name="primary">#ffff</color>
     <color name="secondary">#396295</color>
-    <color name="gray">#A8AAAD</color>
+    <color name="gray">#5C5E60</color>
     <color name="blue">#90AFD5</color>
     <color name="orange">#F1A43C</color>
     <color name="yellow">#F5CA45</color>
