--- a/app/src/main/res/layout/daily_item.xml
+++ b/app/src/main/res/layout/daily_item.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:layout_marginStart="16dp"
-    android:orientation="horizontal">
+    android:layout_height="70dp">
 
     <TextView
         android:id="@+id/day_txt"
@@ -13,20 +11,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="saturday"
-        android:layout_weight="1"
-        android:layout_gravity="center_vertical"
         android:textColor="@color/secondary"
         android:textSize="14sp"
-         />
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/day_icon"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:layout_weight="0.5"
-        android:layout_gravity="center_vertical"
         android:src="@drawable/icon_10d"
-       />
+        android:layout_marginStart="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/day_txt"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/day_status"
@@ -35,10 +35,11 @@
         android:layout_height="wrap_content"
         android:text="cloudy"
         android:textColor="@color/secondary"
-        android:layout_gravity="center_vertical"
         android:textSize="14sp"
-        android:layout_weight="1.5"
-        />
+        android:layout_marginStart="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/day_icon"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/day_max_temp"
@@ -46,23 +47,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="36 c"
-        android:layout_gravity="center_vertical"
+        android:layout_marginEnd="36dp"
         android:textColor="@color/secondary"
         android:textSize="12sp"
-        android:layout_weight="1"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/day_min_temp"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/day_min_temp"
         style="@style/myFontMedium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:text="28 c"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
         android:textColor="@color/gray"
         android:textSize="12sp"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
