--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,7 +26,7 @@
         tools:layout="@layout/fragment_alert" />
     <fragment
         android:id="@+id/settingFragment"
-        android:name="com.iti.a4cast.SettingFragment"
+        android:name="com.iti.a4cast.ui.settings.view.SettingFragment"
         android:label="Settings"
         tools:layout="@layout/fragment_setting" />
     <fragment
