--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,21 +28,10 @@
         android:id="@+id/settingFragment"
         android:name="com.iti.a4cast.ui.settings.view.SettingFragment"
         android:label="Settings"
-        tools:layout="@layout/fragment_setting" >
-        <action
-            android:id="@+id/action_settingFragment_to_settingMapFragment"
-            app:destination="@id/settingMapFragment"
-            app:popUpTo="@id/settingFragment"
-            app:popUpToInclusive="true" />
-    </fragment>
+        tools:layout="@layout/fragment_setting" />
     <fragment
         android:id="@+id/favouriteFragment"
         android:name="com.iti.a4cast.FavouriteFragment"
         android:label="Favorites"
         tools:layout="@layout/fragment_favourite" />
-    <fragment
-        android:id="@+id/settingMapFragment"
-        android:name="com.iti.a4cast.ui.settings.view.SettingMapFragment"
-        android:label="fragment_setting_map"
-        tools:layout="@layout/fragment_setting_map" />
 </navigation>
