ui favorite places

--- a/app/src/main/res/layout/temp_list.xml
+++ b/app/src/main/res/layout/temp_list.xml
@@ -9,11 +9,11 @@
         android:id="@+id/daily_recycle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:listitem="@layout/hourly_item"
+        tools:listitem="@layout/fav_place_item"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
