--- a/app/src/main/res/layout/fav_place_item.xml
+++ b/app/src/main/res/layout/fav_place_item.xml
@@ -36,16 +36,20 @@
                 android:background="@color/blue"
                 android:padding="8dp"
                 android:src="@drawable/baseline_delete_24"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginEnd="8dp"
+                />
 
             <TextView
+                android:id="@+id/txtView_location"
                 style="@style/myFontBold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="2dp"
                 android:textColor="@color/secondary"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/imageView_place"
                 app:layout_constraintTop_toTopOf="parent" />
