--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -103,7 +103,21 @@
             android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:text="Today"
-            android:textColor="@color/black"
+            android:gravity="start"
+            android:textColor="@color/secondary"
+            android:textSize="@dimen/_16sdp"
+            />
+        <TextView
+            android:id="@+id/tomorrow_forecast"
+            style="@style/myFontBold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            android:text="Tomorrow"
+            android:gravity="center"
+            android:textColor="@color/gray"
             android:textSize="@dimen/_16sdp"
             />
         <TextView
@@ -115,14 +129,24 @@
             android:layout_marginTop="8dp"
             android:gravity="end"
             android:layout_weight="1"
-            android:text="next 7 days"
-            android:drawableEnd="@drawable/baseline_arrow_forward_24"
+            android:text="Week"
             android:drawablePadding="2dp"
             android:textColor="@color/gray"
-            android:textSize="@dimen/_14sdp"
+            android:textSize="@dimen/_16sdp"
             />
 
     </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/home_recycle_hours"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="50dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/toggle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
 
         <com.google.android.material.card.MaterialCardView
@@ -139,7 +163,7 @@
             app:cardElevation="2dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toggle"
+            app:layout_constraintTop_toBottomOf="@id/home_recycle_hours"
             app:strokeColor="@color/secondary"
             app:strokeWidth="1dp">
 
@@ -523,19 +547,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
 
-<androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/home_recycle_hours"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"
-    android:layout_marginBottom="50dp"
-    android:orientation="horizontal"
-    app:layout_constraintTop_toBottomOf="@id/details_card_view"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    tools:listitem="@layout/temp_list"
-    />
-        
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
