--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,9 @@
         <item name="android:windowBackground">@drawable/rounded_corner</item>
         <item name="android:background">#00F6F6F6</item>
     </style>
+
+    <style name="DialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">@color/secondary</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
