--- a/app/src/main/res/layout/alarm_dialog.xml
+++ b/app/src/main/res/layout/alarm_dialog.xml
@@ -27,9 +27,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:text="Weather Alert"
+        android:text="@string/weather_daily_alert"
         android:textColor="@color/secondary"
-        android:textSize="@dimen/_16ssp"
+        android:textSize="@dimen/_14ssp"
         app:layout_constraintBottom_toTopOf="@+id/textViewDescribtionMessage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView_icon"
@@ -42,30 +42,29 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:textColor="@color/secondary"
-        android:textSize="@dimen/_14ssp"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_12ssp"
         app:layout_constraintBottom_toTopOf="@+id/btn_dismiss"
         app:layout_constraintEnd_toEndOf="@+id/textView_tilte"
-        app:layout_constraintStart_toStartOf="@+id/textView_tilte"
+        app:layout_constraintStart_toStartOf="@+id/imageView_icon"
         app:layout_constraintTop_toBottomOf="@+id/textView_tilte"
         tools:text="@string/weather_is_fine" />
 
     <Button
         android:id="@+id/btn_dismiss"
         style="@style/myFontSemiDold"
-        android:layout_width="0dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/secondary"
-        android:text="Dismiss"
+        android:text="@string/dismiss"
         android:textColor="@color/white"
         android:textSize="@dimen/_14ssp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/textViewDescribtionMessage"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/imageView_icon"
         app:layout_constraintTop_toBottomOf="@+id/textViewDescribtionMessage" />
 </androidx.constraintlayout.widget.ConstraintLayout>
