--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -6,14 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.map.view.MapActivity">
-
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.settings.view.SettingMapFragment" />
+        tools:context=".ui.settings.view.SettingMapFragment"
+        />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonSaveAsMainLoc"
@@ -21,13 +21,16 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/secondary"
         android:fontFamily="@font/bold"
-        android:text="save location"
+        android:text="@string/save_location"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="@id/main"
         app:layout_constraintEnd_toEndOf="@id/main"
-        app:layout_constraintStart_toStartOf="@id/main" />
+        app:layout_constraintStart_toStartOf="@id/main"
+        android:visibility="gone"
+
+        />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonSaveAsFavLoc"
@@ -35,25 +38,31 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/secondary"
         android:fontFamily="@font/bold"
-        android:text="fav location"
+        android:text="@string/save_location"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toTopOf="@id/buttonSaveAsMainLoc"
         app:layout_constraintEnd_toEndOf="@id/main"
-        app:layout_constraintStart_toStartOf="@id/main" />
+        app:layout_constraintStart_toStartOf="@id/main"
+        android:visibility="gone"
+
+
+        />
     <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonSaveAsAlertLoc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/secondary"
         android:fontFamily="@font/bold"
-        android:text="alert"
+        android:text="@string/save_location"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toTopOf="@id/buttonSaveAsFavLoc"
         app:layout_constraintEnd_toEndOf="@id/main"
-        app:layout_constraintStart_toStartOf="@id/main" />
+        app:layout_constraintStart_toStartOf="@id/main"
+        android:visibility="gone"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
