--- a/app/src/main/res/layout/fragment_fav_details.xml
+++ b/app/src/main/res/layout/fragment_fav_details.xml
@@ -1,24 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".ui.favourite.view.FavFragmentDetails">
+
+    <TextView
+        android:id="@+id/My_Favourite"
+        style="@style/myFontSemiDold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        android:gravity="center"
+        android:text="@string/my_favourite"
+        android:textColor="@color/secondary"
+        android:textSize="@dimen/_16sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/details_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/My_Favourite"
+        >
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/current_card_view"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_marginStart="6dp"
-        android:layout_marginTop="60dp"
         android:layout_marginEnd="6dp"
         android:paddingStart="6dp"
         android:paddingEnd="6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="@id/details_view">
+
 
         <ImageView
             android:id="@+id/today_weather_img"
@@ -28,7 +52,7 @@
             android:src="@drawable/icon_02d"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/location_txt" />
 
         <TextView
             android:id="@+id/location_txt"
@@ -37,12 +61,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:drawablePadding="4dp"
+            android:ellipsize="marquee"
             android:text="cairo, Egypt"
             android:textColor="@color/black"
             android:textSize="@dimen/_14sdp"
             app:drawableStartCompat="@drawable/location"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/today_weather_img" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/temperature"
@@ -83,17 +108,16 @@
             app:layout_constraintStart_toStartOf="@id/location_txt"
             app:layout_constraintTop_toBottomOf="@id/status" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
     <LinearLayout
         android:id="@+id/toggle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/current_card_view"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/current_card_view">
+
         <TextView
             android:id="@+id/hourly_forecast"
             style="@style/myFontBold"
@@ -101,12 +125,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+
             android:layout_weight="1"
-            android:text="Today"
             android:gravity="center"
+            android:text="@string/today"
             android:textColor="@color/secondary"
-            android:textSize="@dimen/_16sdp"
-            />
+            android:textSize="@dimen/_16sdp" />
+
         <TextView
             android:id="@+id/tomorrow_forecast"
             style="@style/myFontBold"
@@ -114,28 +140,30 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:layout_weight="1"
-            android:text="Tomorrow"
             android:gravity="center"
+            android:text="@string/tomorrow"
             android:textColor="@color/gray"
-            android:textSize="@dimen/_16sdp"
-            />
+            android:textSize="@dimen/_16sdp" />
+
         <TextView
             android:id="@+id/weekly_forecast"
             style="@style/myFontBold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
             android:layout_marginTop="8dp"
-            android:gravity="center"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
             android:layout_weight="1"
-            android:text="Week"
             android:drawablePadding="2dp"
+            android:gravity="center"
+            android:text="@string/week"
             android:textColor="@color/gray"
-            android:textSize="@dimen/_16sdp"
-            />
+            android:textSize="@dimen/_16sdp" />
 
     </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/home_recycle_hours"
         android:layout_width="match_parent"
@@ -143,16 +171,15 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="50dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/toggle"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toggle" />
 
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/details_card_view"
         android:layout_width="match_parent"
-        android:layout_height="230dp"
+        android:layout_height="250dp"
         android:layout_margin="16dp"
         android:layout_marginStart="6dp"
         android:layout_marginTop="6dp"
@@ -214,8 +241,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/imageView_wind_icon"
-                        />
+                        app:layout_constraintTop_toBottomOf="@id/imageView_wind_icon" />
 
                     <TextView
                         android:id="@+id/wind_speed"
@@ -278,8 +304,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/imageView_clouds_icon"
-                        />
+                        app:layout_constraintTop_toBottomOf="@id/imageView_clouds_icon" />
 
                     <TextView
                         android:id="@+id/cloud"
@@ -341,8 +366,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/imageView_pressure_icon"
-                        />
+                        app:layout_constraintTop_toBottomOf="@id/imageView_pressure_icon" />
 
                     <TextView
                         android:id="@+id/pressure"
@@ -402,8 +426,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/imageView_visibility_icon"
-                        />
+                        app:layout_constraintTop_toBottomOf="@id/imageView_visibility_icon" />
 
                     <TextView
                         android:id="@+id/visibility"
@@ -463,8 +486,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/imageView_humidity_icon"
-                        />
+                        app:layout_constraintTop_toBottomOf="@id/imageView_humidity_icon" />
 
                     <TextView
                         android:id="@+id/humidity"
@@ -524,8 +546,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/imageView_uvi_icon"
-                        />
+                        app:layout_constraintTop_toBottomOf="@id/imageView_uvi_icon" />
 
                     <TextView
                         android:id="@+id/uvi"
@@ -544,7 +565,26 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:indeterminateTint="@color/secondary"
+            android:indeterminateTintMode="src_atop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"
+            />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
