--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -7,14 +7,31 @@
     android:background="@color/blue"
     tools:context=".ui.settings.view.SettingFragment">
 
+    <TextView
+        android:id="@+id/txt_titlee"
+        style="@style/myFontBold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/settings"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        />
+
     <androidx.cardview.widget.CardView
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="62dp"
         android:layout_marginBottom="24dp"
         android:elevation="16dp"
-        app:cardCornerRadius="32dp">
+        app:cardCornerRadius="32dp"
+        app:layout_constraintTop_toBottomOf="@id/txt_titlee">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -64,7 +81,7 @@
 
                 <RadioButton
                     android:id="@+id/radio_button_C"
-                    style="@style/myFontSemiDold"
+                    style="@style/myFontMedium"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -75,7 +92,7 @@
 
                 <RadioButton
                     android:id="@+id/radio_button_K"
-                    style="@style/myFontSemiDold"
+                    style="@style/myFontMedium"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -86,7 +103,7 @@
 
                 <RadioButton
                     android:id="@+id/radio_button_F"
-                    style="@style/myFontSemiDold"
+                    style="@style/myFontMedium"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -108,23 +125,23 @@
 
                 <RadioButton
                     android:id="@+id/radio_button_MPerSec"
-                    style="@style/myFontSemiDold"
+                    style="@style/myFontMedium"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:buttonTint="@color/secondary"
                     android:text="@string/meter_per_second"
                     android:textColor="@color/black"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <RadioButton
                     android:id="@+id/radio_button_MilePerHour"
-                    style="@style/myFontSemiDold"
+                    style="@style/myFontMedium"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:buttonTint="@color/secondary"
                     android:text="@string/mile_per_hour"
                     android:textColor="@color/black"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
 
             </RadioGroup>
@@ -141,7 +158,7 @@
 
                 <RadioButton
                     android:id="@+id/radio_button_English"
-                    style="@style/myFontSemiDold"
+                    style="@style/myFontMedium"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -152,7 +169,7 @@
 
                 <RadioButton
                     android:id="@+id/radio_button_Arabic"
-                    style="@style/myFontSemiDold"
+                    style="@style/myFontMedium"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -175,31 +192,31 @@
 
                 <RadioButton
                     android:id="@+id/radio_button_GPS"
-                    style="@style/myFontSemiDold"
+                    style="@style/myFontMedium"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:buttonTint="@color/secondary"
                     android:text="@string/gps"
                     android:textColor="@color/black"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <RadioButton
                     android:id="@+id/radio_button_map"
-                    style="@style/myFontSemiDold"
+                    style="@style/myFontMedium"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:buttonTint="@color/secondary"
                     android:text="@string/map"
                     android:textColor="@color/black"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
             </RadioGroup>
 
             <TextView
                 android:id="@+id/textView"
-                style="@style/myFontBold"
+                style="@style/myFontSemiDold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/temperature"
@@ -210,7 +227,7 @@
 
             <TextView
                 android:id="@+id/textView2"
-                style="@style/myFontBold"
+                style="@style/myFontSemiDold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/location"
@@ -222,10 +239,10 @@
 
             <TextView
                 android:id="@+id/textView3"
-                style="@style/myFontBold"
+                style="@style/myFontSemiDold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="38dp"
                 android:text="@string/language"
                 android:textColor="@color/secondary"
                 android:textSize="20sp"
@@ -234,7 +251,7 @@
 
             <TextView
                 android:id="@+id/textView5"
-                style="@style/myFontBold"
+                style="@style/myFontSemiDold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/wind_speed"
@@ -245,6 +262,7 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>z
+    </androidx.cardview.widget.CardView>
+    z
 
 </androidx.constraintlayout.widget.ConstraintLayout>
