--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.iti.a4cast.ui.home.view.HomeFragment"
-        android:label="Home"
+        android:label="@string/home"
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_homeFragment_to_daysFragment"
@@ -22,17 +22,17 @@
     <fragment
         android:id="@+id/alertFragment"
         android:name="com.iti.a4cast.ui.alert.view.AlertFragment"
-        android:label="Alerts"
+        android:label="@string/alerts"
         tools:layout="@layout/fragment_alert" />
     <fragment
         android:id="@+id/settingFragment"
         android:name="com.iti.a4cast.ui.settings.view.SettingFragment"
-        android:label="Settings"
+        android:label="@string/settings"
         tools:layout="@layout/fragment_setting" />
     <fragment
         android:id="@+id/favouriteFragment"
         android:name="com.iti.a4cast.ui.favourite.view.FavouriteFragment"
-        android:label="Favorites"
+        android:label="@string/favorite"
         tools:layout="@layout/fragment_favourite" >
         <action
             android:id="@+id/action_favouriteFragment_to_favFragmentDetails"
@@ -41,7 +41,7 @@
     <fragment
         android:id="@+id/favFragmentDetails"
         android:name="com.iti.a4cast.ui.favourite.view.FavFragmentDetails"
-        android:label="fragment_fav_details"
+        android:label=" "
         tools:layout="@layout/fragment_fav_details" >
         <argument
             android:name="lat"
