--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,9 @@
         <item name="colorAccent">@color/secondary</item>
         <item name="android:textColor">@color/white</item>
     </style>
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here -->
+        <item name="android:statusBarColor">@color/white</item>
+    </style>
 </resources>
