--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
     <style name="Base.Theme._4cast" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:statusBarColor">#396295</item>
     </style>
+
 
     <style name="Theme._4cast" parent="Base.Theme._4cast">
         <item name="android:windowDisablePreview">true</item>
+        <item name="android:statusBarColor">#396295</item>
 
     </style>
 
